# tg-audio-describer-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Caddyfile  Dockerfile  PERSISTENCE.md  QWEN copy.md  QWEN.md  README.md  REFACTOR_PROGRESS.md  alembic.ini  bot.py  config.py  deploy-env.sh  docker-entrypoint.sh  pyproject.toml  requirements-local.txt  requirements.txt  start.sh  state.py  update.sh
.claude/: settings.json  skills
alembic/: env.py
application/: conversation.py  free_uses.py  migration.py  oauth_state.py  pipelines.py  state.py  user_settings.py
core/: i18n.py  pipelines.py
db/: __init__.py  database.py  encryption.py
docker/: Dockerfile  Dockerfile.frontend  deploy.sh  docker-compose.yml  docker-entrypoint.sh  start.sh  update.sh
docs/: ENV_REFERENCE.md  PERSISTENCE.md  PROJECT.md  REFACTOR_PLAN.md  SQLITE_MIGRATION.md  TMA_IMPLEMENTATION_SUMMARY.md  cloudflare-tunnel-setup.md  decomposition-plan.md  merge-api-into-bot.md  miniapp-https-checklist.md  project-summary.md  redis-integration-plan.md  refactor-progress.md  structure-deadcode-refactoring.md  tma-implementation-guide.md  tma-upgrade-roadmap.md  vps-setup-guide.md
domain/: audio_processor.py
handlers/: commands.py  messages.py  settings.py  youtube_callbacks.py
infrastructure/: redis_client.py
interfaces/: __init__.py
locales/: en.json  ru.json
plans/: per-user-settings.md  refactor-bot-decompose.md
prompts/: note.md  summary_detailed.md  summary_keypoints.md
scripts/: pack-repo.sh  run-checks.sh  start.sh  update.sh
services/: limits.py  llm.py  obsidian.py  stt.py  youtube.py
shared/: config.py  i18n.py  keyboards.py  utils.py  (+1 more)
(+63 files in other folders)
